dotfiles/.config/waybar/style.css
@define-color background-color #121212;
@define-color text-color white;

@define-color gray-900 #212121;
@define-color gray-800 #424242;
@define-color gray-700 #616161;

@define-color teal-800 #00695C;
@define-color green-800 #2E7D32;
@define-color orange-800 #EF6C00;
@define-color red-800 #C62828;
@define-color blue-gray-800 #37474F;
@define-color cyan-900 #006064;

* {
  border: none;
  font-family: FiraCode;
  min-height: 0;
  border-radius: 0;
}

window#waybar {
  background: @background-color;
  border-radius: 0.5rem;
}

tooltip {
  background: @gray-900;
  border-radius: 0.5rem;
}

tooltip label {
  color: @text-color;
  padding: 0;
}

#workspaces button {
  background: transparent;
  color: @text-color;
  border-radius: 0.5rem;
  padding: 0.25rem;
  padding-left: 0.35rem; /* fix off-center workspace labels */
}

#workspaces button.active {
  background: @gray-800;
}

#clock {
  color: @text-color;
}

#idle_inhibitor {
  color: @text-color;
  margin: 0 0.25rem;
  padding: 0;
  margin-bottom: 1px; /* fix off-center icon */
  padding-right: 0.3rem; /* fix off-center icon */
  border-radius: 0.5rem;
  font-size: 1.5rem;
}

#idle_inhibitor.activated {
  margin-top: 1px; /* fix off-center icon */
  margin-bottom: 0; /* fix off-center icon */
  background: @teal-800;
}

#battery {
  color: @text-color;
  margin: 0 0.25rem;
  padding: 0 0.7rem;
  border-radius: 0.5rem;
}

#battery.full {
  background: @green-800;
}

#battery.warning {
  background: @orange-800;
}

#battery.critical {
  background: @red-800;
}

#wireplumber {
  color: @text-color;
  margin: 0 0.25rem;
  padding: 0 0.5rem;
  padding-right: 1rem; /* fix off-center icon */
  border-radius: 0.5rem;
}

#wireplumber.muted {
  background: @blue-gray-800;
}

#tray {
  margin: 0 0.1rem;
  padding: 0;
}

#tray * {
  box-shadow: none;
}

#tray menu {
  border-radius: 0.5rem;
  background-clip: border-box;
  background: @gray-900;
  color: @text-color;
}

/* ref: https://lazka.github.io/pgi-docs/Gtk-3.0/classes/MenuItem.html#class-details */
#tray menu menuitem {
  color: @text-color;
}

#tray menu menuitem:not(disabled):hover {
  background: @cyan-900;
}

#tray menu menuitem:disabled {
  color: @gray-700;
}

